--- a/Part 1 - Displaying Data/MonkeyFinder/View/DetailsPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/DetailsPage.xaml
@@ -9,6 +9,9 @@
 
     <ScrollView>
         <VerticalStackLayout>
+
+
+
             <Grid ColumnDefinitions="*,Auto,*"
                   RowDefinitions="160, Auto">
 
@@ -35,6 +38,13 @@
 
                 </Frame>
             </Grid>
+
+            <Button Text="Show on Map"
+                    Command="{Binding OpenMapCommand}"
+                    HorizontalOptions="Center"
+                    WidthRequest="200"
+                    Margin="8"
+                    Style="{StaticResource ButtonOutline}"/>
 
             <VerticalStackLayout Padding="10" Spacing="10">
                 <Label Text="{Binding Monkey.Details}"
