--- a/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
@@ -19,7 +19,7 @@
         <RefreshView Grid.ColumnSpan="2"
                      Command="{Binding GetMonkeysCommand}"
                      IsRefreshing="{Binding IsRefreshing}">
-            <CollectionView BackgroundColor="White"
+            <CollectionView 
                             ItemsSource="{Binding Monkeys}"
                             SelectionMode="None">
                 <CollectionView.EmptyView>
